force-app/main/default/objects/Qualified_Faculty__c/Qualified_Faculty__c.object-meta.xml
<CustomObject>
    <description>The faculty who is qualified to teach a study unit.</description>
    <label>Qualified Faculty</label>
    <nameField>
        <displayFormat>QFA-{00000}</displayFormat>
        <label>Qualified Faculty #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Qualified Faculties</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>