force-app/main/default/objects/Qualified_Faculty__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The faculty who is qualified to teach the study unit.</inlineHelpText>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Qualified Faculties</relationshipLabel>
    <relationshipName>Qualified_Faculties</relationshipName>
    <type>Lookup</type>
</CustomField>