force-app/main/default/objects/Qualified_Faculty__c/fields/Study_Unit__c.field-meta.xml
<CustomField>
    <fullName>Study_Unit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Study Unit</label>
    <referenceTo>Study_Unit__c</referenceTo>
    <relationshipLabel>Qualified Faculties</relationshipLabel>
    <relationshipName>Qualified_Faculties</relationshipName>
    <type>Lookup</type>
</CustomField>