force-app/main/default/objects/Qualified_Faculty__c/fields/Translation_Map__c.field-meta.xml
<CustomField>
    <fullName>Translation_Map__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Stores the translated values for defined fields in multiple languages.</description>
    <inlineHelpText>Stores the translated values for defined fields in multiple languages.</inlineHelpText>
    <label>Translation Map</label>
    <referenceTo>Translation_Map__c</referenceTo>
    <relationshipLabel>Qualified Faculties</relationshipLabel>
    <relationshipName>Qualified_Faculties</relationshipName>
    <type>Lookup</type>
</CustomField>